manifest/staging/k8s/webapp-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      role: webapp
  template:
    metadata:
      labels:
        role: webapp
    spec:
      containers:
      - name: webapp
        image: darchlabs/webapp:0.1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-svc
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    role: webapp
